--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.1.1/dist/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://localhost/libs/jquery/3.1.1/jquery.min.js"><\/script>')</script>
 
-    <!-- <script src='https://cdn.jsdelivr.net/gh/r03ert0/mriviewerjs@0.1.1/mriviewer.js'></script>
-    <script>window.MRIViewer || document.write('<script src="http://localhost/mriviewerjs/mriviewer.js"><\/script>')</script> -->
+    <script src='https://cdn.jsdelivr.net/gh/r03ert0/mriviewerjs@0.1.2/mriviewer.js'></script>
+    <script>window.MRIViewer || document.write('<script src="http://localhost/mriviewerjs/mriviewer.js"><\/script>')</script>
 
-    <script src="http://localhost/mriviewerjs_k4t/mriviewer.js"></script>
+    <!-- <script src="http://localhost/mriviewerjs/mriviewer.js"></script> -->
 
     <script src='https://cdn.jsdelivr.net/gh/r03ert0/muijs/mui.js'></script>
     <script>window.MUI || document.write('<script src="http://localhost/muijs/mui.js"><\/script>')</script>
