--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.1.1/dist/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://localhost/libs/jquery/3.1.1/jquery.min.js"><\/script>')</script>
 
-    <script src='https://cdn.jsdelivr.net/gh/r03ert0/mriviewerjs@0.1.2/mriviewer.js'></script>
+    <script src='https://cdn.jsdelivr.net/gh/r03ert0/mriviewerjs@v0.1.2/mriviewer.js'></script>
     <script>window.MRIViewer || document.write('<script src="http://localhost/mriviewerjs/mriviewer.js"><\/script>')</script>
 
     <!-- <script src="http://localhost/mriviewerjs/mriviewer.js"></script> -->
