--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div id="header">
       <!-- Top-right menu bar -->
       <div id="menu">
-        <img id="doc" class="button" title="documentation" src="img/doc.svg"/>
+        <!--<img id="doc" class="button" title="documentation" src="img/doc.svg"/>-->
         <a href="https://github.com/neuroanatomy/reorient/issues" target="_blank"><img id="bug" class="button" title="report a bug" src="img/bug.svg"/></a>
         <a href="https://github.com/neuroanatomy/reorient" target="_blank"><img id="github" class="button" title="join our github project" style="width:15px;height:15px" src="img/github.svg"/></a>
       </div>
