--- a/doc.html
+++ b/doc.html
@@ -98,7 +98,7 @@
           <b>Saving.</b> Please save the rotation matrix and the selection box together with your reoriented nifti volume for a fully reproducible workflow.<br />
           <p2 style="font-weight: 400;">Save Rotation Matrix</p2> saves the affine matrix of the current MRI to a text file.<br />
           <p2 style="font-weight: 400;">Save Selection Box</p2> saves the current selection to a text file.<br/>
-          <p2 style="font-weight: 400;">Save Nifti</p2> saves saves the transformed version of the current MRI in nifti format. Depending on the size of your volume, the save may take a moment without printing anything on screen. Patience 🙃
+          <p2 style="font-weight: 400;">Save Nifti</p2> saves the transformed version of the current MRI in nifti format. Depending on the size of your volume, the save may take a moment without printing anything on screen. Patience 🙃
         </p>
         <p>
           <p2 style="font-weight: 400;">Load Selection Box.</p2> Load a volume selection from a text file. It will update the crop box boundaries which are only displayed when the Selection tool is selected.
