--- a/index.html
+++ b/index.html
@@ -59,12 +59,18 @@
         color: white;
         outline: 2px dashed white;
         outline-offset: -10px;
-        width: 500px;
-        padding: 100px 20px;
+        width: 100%;
+        height: 100%;
         text-align: center;
         font-family: "Roboto Mono", monospace;
         font-size: 14px;
         font-weight: 100;
+      }
+      .box_input {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate( -50%, -50% );
       }
       .box.is-dragover {
         background-color: #333;
