--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         font-size: 14px;
         font-weight: 100;
         color: white;
+        margin: 0 0 5px 5px;
       }
       img.button {
         width: 0.9rem;
@@ -170,17 +171,20 @@
 
         <!-- Information -->
         <div id="info">
-          <span class="mui mui-label">World to voxel matrix</span>
+          <span class="mui mui-label">Volume shape</span>
           <div id="info1"></div>
-          <span class="mui mui-label">Voxel to world matrix</span>
+          <span class="mui mui-label">World to voxel</span>
           <div id="info2"></div>
-          <span class="mui mui-label">Crop box</span>
+          <span class="mui mui-label">Voxel to world</span>
           <div id="info3"></div>
+          <span class="mui mui-label">Crop box</span>
+          <div id="info4"></div>
         </div>
 
       </div>
 
       <div id="panel-right" style="flex:1">
+        <div id="info0"></div>
         <div id="viewer1">
         </div>
         <div id="viewer2">
