--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 id="loadNifti"
                 class="mui mui-push mui-no-border"
                 style="font-weight:500;font-size:16px"
-              >Choose</strong> a <pre style="display:inline-block">.nii.gz</pre> file or drag it here.
+              >Choose</strong> a <pre style="display:inline-block">.nii.gz</pre> or a <pre style="display:inline-block">.nii</pre> file or drag it here.
             </div>
             <div class="box_uploading">Uploading&hellip;</div>
             <div class="box_error">Error!<span></span>.</div>
@@ -198,7 +198,7 @@
     <!-- <script>window.jQuery || document.write('<script src="http://localhost/libs/jquery/3.1.1/jquery.min.js"><\/script>')</script> -->
 
     <script src="https://cdn.jsdelivr.net/gh/r03ert0/mriviewerjs@v0.1.5/mriviewer.js"></script>
-    <!-- <script src="lib/mriviewerjs/mriviewer.js"></script> -->
+    <!-- <script src="/lib/mriviewerjs/mriviewer.js"></script> -->
     <!-- <script>window.MRIViewer || document.write('<script src="http://localhost/mriviewerjs/mriviewer.js"><\/script>')</script> -->
 
     <script src="https://cdn.jsdelivr.net/gh/r03ert0/muijs/mui.js"></script>
