better Choose message style

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 id="loadNifti"
                 class="mui mui-push mui-no-border"
                 style="font-weight:500;font-size:16px"
-              >Choose</strong> a <pre style="display:inline-block">.nii.gz</pre> or a <pre style="display:inline-block">.nii</pre> file or drag it here.
+              >Choose</strong> a .nii.gz or a .nii file or drag it here.
             </div>
             <div class="box_uploading">Uploading&hellip;</div>
             <div class="box_error">Error!<span></span>.</div>
@@ -203,8 +203,8 @@
     <!-- <link rel="stylesheet" type="text/css" href="http://localhost/muijs/mui.css" /> -->
 
     <link rel="stylesheet" type="text/css" href="reorient.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,500" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,500" rel="stylesheet" />
 
     <script src="reorient.js"></script>
 
