add "Reset Selection" button

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
           <div id="loadSelection" class="mui mui-push" style="padding:1.2% 0">Load Selection Box</div>
           <div id="saveSelection" class="mui mui-push" style="padding:1.2% 0">Save Selection Box</div>
           <div id="resetMatrix" class="mui mui-push" style="padding:1.2% 0">Reset Matrix</div>
+          <div id="resetSelection" class="mui mui-push" style="padding:1.2% 0">Reset Selection</div>
           <div id="saveNifti" class="mui mui-push" style="padding:1.2% 0">Save Nifti</div>
         </div>
 
